--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index styles/index.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png"> 
     <title>Frontend Mentor | Intro section with dropdown navigation</title>
 </head>
