--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <button type="button" id="icon-menu-button" onclick="menuButton()"><img class="icon-menu" src="icon-menu.svg" alt="icon-menu"></button>
         <div class="all" id="nav">
-            <button type="button" id="icon-close-menu-button" onclick="closeMenu()"><img class ="index/icon-close-menu" src="icon-close-menu.svg" alt="icon-close-menu"></button>
+            <button type="button" id="icon-close-menu-button" onclick="closeMenu()"><img class ="icon-close-menu" src="icon-close-menu.svg" alt="icon-close-menu"></button>
             <div class="navbar">
                 <div class="dropdown features">
                     <button type="button" onclick="dropdown" id="features-button">Features <img class="icon-arrow-down none"
